# tracker

tracker-api/: pyproject.toml
tracker-api/app/: main.py  models.py
tracker-api/app/controllers/: categories.py  expenses.py
tracker-api/app/services/: category_service.py  expense_service.py
tracker-ui/: package-lock.json  package.json
tracker-ui/src/: App.tsx  config.ts  index.css
tracker-ui/src/components/: ExpenseOverview.tsx  expenseOverview.module.scss
tracker-ui/src/components/__tests__/: CategoriesList.test.tsx  CategoryItem.test.tsx  DiagramItem.test.tsx  ExpenseOverview.test.tsx  ExpensesDiagram.test.tsx
tracker-ui/src/components/categories/: CategoriesList.tsx  categoriesList.module.scss
tracker-ui/src/components/categories/category-item/: CategoryItem.tsx  categoryItem.module.scss
tracker-ui/src/components/diagram/: ExpensesDiagram.tsx  expensesDiagram.module.scss
tracker-ui/src/components/diagram/diagram-item/: DiagramItem.tsx  diagramItem.module.scss
tracker-ui/src/services/: categoriesService.ts  expensesService.ts
tracker-ui/src/types/: CategoryTypes.ts  ExpenseTypes.ts
tracker-ui/utils/: _variables.scss
