[tool.poetry]
name = "tracker-api"
version = "0.1.0"
description = ""
authors = ["Ksenia Kelv <ksenija.kelv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.103.0"
uvicorn = { version = "^0.23.0", extras = ["standard"] }

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"